--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi-seo",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "Hapi SEO plugin for Single Page Application (SPA)",
   "main": "index.js",
   "scripts": {
@@ -32,6 +32,10 @@
   },
   "homepage": "https://github.com/nasa8x/hapi-seo#README",
   "dependencies": {
-    "mix-dash": "^1.1.15"
+    "@hapi/crumb": "^7.3.2",
+    "@hapi/hapi": "^18.4.0",
+    "@hapi/vision": "^5.5.4",
+    "mix-dash": "^1.1.15",
+    "mustache": "^3.1.0"
   }
 }
